--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,41 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.11
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+attrs==25.3.0
+beautifulsoup4==4.13.4
 blinker==1.9.0
 certifi==2025.4.26
 click==8.2.1
 distro==1.9.0
+fastapi==0.115.12
 Flask==3.1.1
+frozenlist==1.6.2
 h11==0.16.0
+html2text==2025.4.15
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.10.0
+Markdown==3.8
 MarkupSafe==3.0.2
+multidict==6.4.4
+numpy==2.3.0
 openai==1.84.0
 pillow==11.2.1
+propcache==0.3.1
 pydantic==2.11.5
 pydantic_core==2.33.2
+python-dotenv==1.1.0
 sniffio==1.3.1
+soupsieve==2.7
+starlette==0.46.2
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+uvicorn==0.34.3
 Werkzeug==3.1.3
-numpy
+yarl==1.20.0
