--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-# .env file example
-API_KEY="eyJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6IjIyZjIwMDAyNzNAZHMuc3R1ZHkuaWl0bS5hYy5pbiJ9.ODIcsNPnLHL-TmTL0jpuMF8DogUUKRvnWOnZhS2pIxw"
+API_KEY=eyJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6IjIyZjIwMDAyNzNAZHMuc3R1ZHkuaWl0bS5hYy5pbiJ9.ODIcsNPnLHL-TmTL0jpuMF8DogUUKRvnWOnZhS2pIxw
