--- a/file.yaml
+++ b/file.yaml
@@ -3,7 +3,7 @@ description: "TDS Virtual TA Project Sample (but not the actual evaluation) Ques
 providers:
   - id: https
     config:
-      url: https://tds-proj1-virtual-assist.vercel.app/
+      url: https://tds-proj1-virtual-assist.vercel.app/api/
       method: POST
       headers:
         Content-Type: application/json
