--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiohappyeyeballs==2.6.1
-aiohttp==3.12.11
+aiohttp==3.12.13
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
@@ -7,11 +7,13 @@ attrs==25.3.0
 beautifulsoup4==4.13.4
 blinker==1.9.0
 certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.2.1
+config==0.5.1
 distro==1.9.0
 fastapi==0.115.12
 Flask==3.1.1
-frozenlist==1.6.2
+frozenlist==1.7.0
 h11==0.16.0
 html2text==2025.4.15
 httpcore==1.0.9
@@ -27,15 +29,17 @@ numpy==2.3.0
 openai==1.84.0
 pillow==11.2.1
 propcache==0.3.1
-pydantic==2.11.5
+pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.1.0
+requests==2.32.4
 sniffio==1.3.1
 soupsieve==2.7
 starlette==0.46.2
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+urllib3==2.4.0
 uvicorn==0.34.3
 Werkzeug==3.1.3
 yarl==1.20.0
